--- a/Task8/index.html
+++ b/Task8/index.html
@@ -23,7 +23,7 @@
 
 
             <div class="colum">
-                <h2>O'zingizga mos kursni tanlash</h2>
+                <h2>O'quv jarayoni</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Inventore debitis, et minima neque consequatur temporibus 
                     tempora non dignissimos vero nemo?</p>
@@ -32,7 +32,7 @@
 
 
             <div class="colum">
-                <h2>O'zingizga mos kursni tanlash</h2>
+                <h2>Real loyihalarni amalga oshirish</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Inventore debitis, et minima neque consequatur temporibus 
                     tempora non dignissimos vero nemo?</p>
