--- a/Task8/index.html
+++ b/Task8/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">TA'LIMGA TIZIMLI YONDASHUV</h1>
+        <h1 class="title">TA'LIMGA <br> TIZIMLI YONDASHUV</h1>
         <div class="row">
 
 
