--- a/Task8/index.html
+++ b/Task8/index.html
@@ -1,30 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
     <div class="container">
-<<<<<<< HEAD
-      <h1 class="title">
-        TA'LIMGA <br />
-        TIZIMLI YONDASHUV
-      </h1>
-      <div class="row">
-        <div class="colum">
-          <h2>O'zingizga mos kursni tanlash</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore
-            debitis, et minima neque consequatur temporibus tempora non
-            dignissimos vero nemo?
-          </p>
-          <img src="./images/edu7.svg" alt="" />
-        </div>
-=======
         <h1 class="title">TA'LIMGA <br> TIZIMLI YONDASHUV</h1>
         <div class="row">
 
@@ -40,6 +24,7 @@
 
             <div class="colum">
                 <h2>O'quv jarayoni</h2>
+                <br>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Inventore debitis, et minima neque consequatur temporibus 
                     tempora non dignissimos vero nemo?</p>
@@ -54,33 +39,9 @@
                     tempora non dignissimos vero nemo?</p>
                     <img src="./images/edu5.svg" alt="">
             </div>
->>>>>>> 17628bf22b30559020534d879fb7b8a68289d763
 
-        <div class="colum">
-          <h2>O'quv jarayoni</h2>
-          <br />
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore
-            debitis, et minima neque consequatur temporibus tempora non
-            dignissimos vero nemo?
-          </p>
-          <img src="./images/edu8.svg" alt="" />
-        </div>
 
-        <div class="colum">
-          <h2>Real loyihalarni amalga oshirish</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore
-            debitis, et minima neque consequatur temporibus tempora non
-            dignissimos vero nemo?
-          </p>
-          <img src="./images/edu5.svg" alt="" />
         </div>
-      </div>
     </div>
-<<<<<<< HEAD
-  </body>
-=======
 </body>
->>>>>>> 17628bf22b30559020534d879fb7b8a68289d763
 </html>
