Bella Olonje  yuklandi(ozgina kami bor)

--- a/ekstra task/index.html
+++ b/ekstra task/index.html
@@ -21,48 +21,30 @@
 
   <body>
 
-    <section>
-        <div class="container">
-            <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">
-                   <div class="title-image"> <img src="images/Bella Olonje logo 111 1.png" alt=""> </div> 
-                  </a>
-                  <ul class="navbar-nav">
-                      <li class="nav-item mx-5">
-                          <a class=" nav-link " href="#">Home</a>
-                      </li>
-                  </ul>
-                </div>
-              </nav>
-        </div>
-    </section>
-    <br>
-
-    <section>
+    <section class="title">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">
+                  <a class="navbar-brand ms-5" href="#">
                       <img src="images/Bella Olonje logo 111 1.png" alt="logo">
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
 
-                  <div class="collapse navbar-collapse " id="navbarNav"   >
+                  <div class="collapse navbar-collapse navbar-title " id="navbarNav"   >
                     <ul class="navbar-nav ms-auto">
-                      <li class="nav-item mx-5">
+                      <li class="nav-item me-5">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                      <li class="nav-item me-5">
+                        <a class="nav-link" href="#">Product</a>
                       </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                      <li class="nav-item me-5">
+                        <a class="nav-link" href="#">FAQ</a>
                       </li>
-                      <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
+                      <li class="nav-item me-5">
+                        <a class="nav-link disabled">Contact</a>
                       </li>
                     </ul>
                   </div>
@@ -70,6 +52,113 @@
               </nav>
         </div>
     </section>
+
+    <header>
+      <div class="container">
+        <div class="background">
+          <div class="custom-head">
+          <h6>Food app</h6>
+          <h1>Why stay hungry when <br>
+            you can order form Bella Onojie</h1>
+            <p>Download the bella onoje’s food app now on</p>
+          </div>
+            <div class="buttons">
+              <button type="button" class="btn btn-primary btn-lg me-5 left">Playstore</button>
+              <button type="button" class="btn btn-secondary btn-lg right">App store</button>
+            </div>
+        </div>
+        <div class="index-phone d-flex">
+          <div class="col-4 phone1 ">
+            <img src="images/phone1.png" alt="">
+          </div>
+          <div class="col-4 phone2 ">
+            <img src="images/phone2.png" alt="">
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <section class="custom-body ">
+      <div class="container ">
+        <div class="line"></div>
+        <h2 class="text-center">How the app works</h2>
+
+      </div>
+    </section>
+
+    <section class="article">
+      <div class="container  d-flex">
+        
+        <div class="col-4 ">
+          <img src="images/phone3.png" alt="phone3">
+        </div>
+        <div class="col-6 custom-paragraf ">
+          <h3>Create an account</h3>
+          <h2>Create/login to an existing <br>
+            account to get started</h2>
+
+            <p>An account is created with your email <br>
+              and a desired password</p>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="article-2">
+      <div class="container d-flex border-bottom">
+
+        <div class="col-6 custom-paragraf">
+          <h3>Explore varieties</h3>
+          <h2>Shop for your favorites <br>
+            meal as e dey hot.</h2>
+            <p>Shop for your favorite meals or drinks <br>
+              and enjoy while doing it.</p>
+        </div>
+
+        <div class="col-4 phone-4">
+          <img src="images/phone4.png" alt="phone4">
+        </div>
+
+
+      </div>
+    </section>
+
+    <section class="article-3">
+      <div class="container  d-flex">
+        
+        <div class="col-4 ">
+          <img src="images/phone5.png" alt="phone3">
+        </div>
+        <div class="col-6 custom-paragraf ">
+          <h3>Checkout</h3>
+          <h2>When you done check out <br>
+            and get it delivered.</h2>
+            <p>When you done check out and get it <br>
+              delivered with ease.</p>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="footer ">
+      <div class="container border">
+        <div class="footer-back border">
+          <div class="footer-title text-center">
+            <h2>Download the app now.</h2>
+            <h4>Available on your favorite store. Start your premium experience now</h4>
+          </div>
+
+          <div class="button-footer text-center">
+            <button type="button" class="btn btn-primary btn-lg me-3 left">Playstore</button>
+            <button type="button" class="btn btn-secondary btn-lg right">App store</button>
+          </div>
+
+
+        </div>
+      </div>
+    </section>
+
+
 
 
   </body>
