--- a/maxway/index.html
+++ b/maxway/index.html
@@ -1421,7 +1421,7 @@
             >
               <span class="icon icon-instagram"></span>
             </a>
-            <a href="https://www.telegram.com">
+            <a href="https://t.me/Yuldashev_Giyosidin">
               <span class="icon icon-telegram"></span>
             </a>
             <a href="https://www.tik-tok.com">
