--- a/maxway/index.html
+++ b/maxway/index.html
@@ -1320,13 +1320,13 @@
                 </h1>
                 <button class="outline-btn btn-first">
                   <a href="https://www.apple.com"
-                    ><span class="icon icon-apple"></span
+                    ><span class="icon icon-apple">App Store</span
                   ></a>
                 </button>
                 <button class="outline-btn">
                   <a
                     href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwisodSuucr0AhUDr5YKHVr_COIYABACGgJ0bA&ae=2&ohost=www.google.com&cid=CAESQOD2Y63MgLE9OQOllYVNd8mS4NKKkRwHd3eQOCHBh4I5BT4-NxUVmB9t5t2moIQcJraYnwzObtqd9pDI2mMNwVc&sig=AOD64_1AgS5SyTzTHOyNh_ER3A8EAmI5hQ&q&adurl&ved=2ahUKEwjt3cquucr0AhXYs1YBHRN_Cx8Q0Qx6BAgEEAE"
-                    ><span class="icon icon-play"></span
+                    ><span class="icon icon-play">Play-Store</span
                   ></a>
                 </button>
               </div>
@@ -1448,7 +1448,7 @@
       autoplay: true,
       dots: false,
       autoplayTimeout: 3000,
-      autoplayHoverPause: true,
+      autoplayHoverPause: true, 
       responsive: {
         0: {
           items: 1.5,
