--- a/Project 3/project.html
+++ b/Project 3/project.html
@@ -87,6 +87,7 @@
                 <button type="button" class="btn btn-primary btn-lg custom-btn-2">SHOP</button>
               </div>
             </div>
+            
             <div class="item">
               <div class="card-image"></div>
               <div class="card-content">
@@ -112,6 +113,7 @@ $('.owl-carousel').owlCarousel({
     loop:true,
     margin:10,
     nav:true,
+    dots: false,
     responsive:{
         0:{
             items:1
