--- a/maxway/index.html
+++ b/maxway/index.html
@@ -1193,7 +1193,7 @@
                   <span class="icon icon-apple"></span></a>
               </button>
               <button class="outline-btn btn-first">
-                <a href="https://www.apple.com">
+                <a href="https://play.google.com/">
                   <span class="icon icon-googleplay"></span></a>
               </button>
             
