--- a/Portfolio/assets/index.html
+++ b/Portfolio/assets/index.html
@@ -384,12 +384,15 @@
 
         <div class="qualification_container container">
           <div class="qualification_tabs">
-            <div class="qualification_button button--flex">
+            <div
+              class="qualification_button button--flex qualification_active"
+              data-target="#education"
+            >
               <i class="uil uil-graduation-cap qualification_icon"></i>
               Education
             </div>
 
-            <div class="qualification_button button--flex">
+            <div class="qualification_button button--flex" data-target="#work">
               <i class="uil uil-briefcase-alt qualification_icon"></i>
               Work
             </div>
@@ -397,16 +400,13 @@
 
           <div class="div qualification_sections">
             <!--==================== QUALIFICATION  content 1====================-->
-            <div class="qualification_content">
+            <div
+              class="qualification_content qualification_active"
+              data-content
+              id="education"
+            >
               <!--==================== QUALIFICATION 1====================-->
               <div class="qualification_data">
-                <div></div>
-
-                <div>
-                  <span class="qualification_rounder"></span>
-                  <span class="qualification_line"></span>
-                </div>
-
                 <div>
                   <h3 class="qualification_title">Web Development</h3>
                   <span class="qualification_subtitle">Seoul - University</span>
@@ -415,15 +415,20 @@
                     2020 - 2021
                   </div>
                 </div>
+
+                <div>
+                  <span class="qualification_rounder"></span>
+                  <span class="qualification_line"></span>
+                </div>
               </div>
 
-              <!--==================== QUALIFICATION 4 ====================-->
+              <!--==================== QUALIFICATION 2 ====================-->
               <div class="qualification_data">
                 <div></div>
 
                 <div>
                   <span class="qualification_rounder"></span>
-                  <!-- <span class="qualification_line"></span> -->
+                  <span class="qualification_line"></span>
                 </div>
 
                 <div>
@@ -436,7 +441,7 @@
                 </div>
               </div>
 
-              <!--==================== QUALIFICATION 1====================-->
+              <!--==================== QUALIFICATION 3 ====================-->
               <div class="qualification_data">
                 <div>
                   <h3 class="qualification_title">Web Design</h3>
@@ -453,8 +458,14 @@
                 </div>
               </div>
 
-              <!--==================== QUALIFICATION 1====================-->
+              <!--==================== QUALIFICATION 4 ====================-->
               <div class="qualification_data">
+                <div></div>
+                <div>
+                  <span class="qualification_rounder"></span>
+                  <span class="qualification_line"></span>
+                </div>
+
                 <div>
                   <h3 class="qualification_title">Cyber Security</h3>
                   <span class="qualification_subtitle">Joongbu University</span>
@@ -463,17 +474,84 @@
                     2019 - 2023
                   </div>
                 </div>
+              </div>
+              <!-- shu yergacha -->
+            </div>
+            <!--==================== QUALIFICATION  content 2 ====================-->
+            <div class="qualification_content" data-content id="work">
+              <!--==================== QUALIFICATION 1====================-->
+              <div class="qualification_data">
+                <div>
+                  <h3 class="qualification_title">Software Enginer</h3>
+                  <span class="qualification_subtitle">Microsoft - Norway</span>
+                  <div class="qualification_calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2020 - 2021
+                  </div>
+                </div>
 
                 <div>
                   <span class="qualification_rounder"></span>
                   <span class="qualification_line"></span>
                 </div>
               </div>
+
+              <!--==================== QUALIFICATION 2 ====================-->
+              <div class="qualification_data">
+                <div></div>
+
+                <div>
+                  <span class="qualification_rounder"></span>
+                  <span class="qualification_line"></span>
+                </div>
+
+                <div>
+                  <h3 class="qualification_title">Frontend Developer</h3>
+                  <span class="qualification_subtitle">Apple Inc - Seoul </span>
+                  <div class="qualification_calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2022 - 2024
+                  </div>
+                </div>
+              </div>
+
+              <!--==================== QUALIFICATION 3 ====================-->
+              <div class="qualification_data">
+                <div>
+                  <h3 class="qualification_title">Ui Designer</h3>
+                  <span class="qualification_subtitle"
+                    >Figma - Joongbu University</span
+                  >
+                  <div class="qualification_calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2020 - 2023
+                  </div>
+                </div>
+
+                <div>
+                  <span class="qualification_rounder"></span>
+                  <!-- <span class="qualification_line"></span> -->
+                </div>
+              </div>
+
               <!-- shu yergacha -->
             </div>
           </div>
         </div>
       </section>
+
+      <!-- ===================SERVICES==================== -->
+      <section class="services section" id="services">
+        <h2 class="section_title">Services</h2>
+        <span class="section_subtitle">What i offer</span>
+
+        <div class="services_container container grid">
+           <!-- ===================SERVICES 1 ==================== -->
+        </div>
+      </section>
+
+
+
     </main>
   </body>
 
