--- a/Portfolio/assets/index.html
+++ b/Portfolio/assets/index.html
@@ -18,7 +18,7 @@
 
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav_logo">Giyosidin</a>
+        <a href="#" class="nav_logo">G'iyosidin</a>
         <div class="nav_menu" id="nav-menu">
           <ul class="nav_list grid">
             <li class="nav_item">
@@ -72,7 +72,8 @@
     </header>
 
     <!-- Main -->
-    <main class="main">
+    <main class="main"> 
+
       <section class="home section" id="home">
         <div class="home_container container grid">
           <div class="home_content grid">
@@ -125,23 +126,17 @@
         -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"
                   />
 
-                  <image
-                    class="home_blob-img"
-                    x="12"
-                    y="18"
-                    xlink:href="Portfolio/assets/image/perfil.png"
-                  />
+                  <!-- <image class="home_blob-img" x="13" y="18" xlink:href="./image/anonym.jpg" > -->
                 </g>
               </svg>
             </div>
 
             <div class="home_data">
-              <h1 class="home_title">Hi, I'am Giyosidin</h1>
+              <h1 class="home_title">Hi, I'am G'iyosidin</h1>
               <h3 class="home_subtitle">Frontend Developer</h3>
               <p class="home_description">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit
-                expedita quam voluptatum nisi dolor odit quaerat autem a, quae
-                reprehenderit?
+                High level experience in web design and development knowledge, 
+                producing quality work.
               </p>
               <a href="#contact" class="button button--flex">
                 Contact Me <i class="uil uil-message button_icon"></i>
@@ -165,7 +160,7 @@
         <span class="section_subtitle">My Introduction</span>
 
         <div class="about_container container grid">
-          <img src="./image/about.jpg" alt="" class="about_img" />
+          <img src="./image/portfolio1.jpg" alt="" class="about_img" />
 
           <div class="about_data">
             <p class="about_description">
@@ -942,7 +937,7 @@
       <div class="footer_bg">
         <div class="footer_container container grid">
           <div>
-            <h1 class="footer_title">Giyosiddin</h1>
+            <h1 class="footer_title">G'iyosidin</h1>
             <span class="footer_subtitle">Frontend Developer</span>
           </div>
 
@@ -957,7 +952,7 @@
             </li> 
             
             <li>
-              <a href="#contact" class="footer_link">Contactme</a>
+              <a href="#contact" class="footer_link">Contact me</a>
             </li>
           </ul>
 
