--- a/Portfolio/assets/index.html
+++ b/Portfolio/assets/index.html
@@ -126,7 +126,7 @@
         -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"
                   />
 
-                  <!-- <image class="home_blob-img" x="13" y="18" xlink:href="./image/anonym.jpg" > -->
+                  <image class="home_blob-img" x="0" y="0" xlink:href="./image/snow.jpg" >
                 </g>
               </svg>
             </div>
