--- a/Portfolio/assets/index.html
+++ b/Portfolio/assets/index.html
@@ -126,7 +126,7 @@
         -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"
                   />
 
-                  <image class="home_blob-img" x="0" y="0" xlink:href="./image/snow.jpg" >
+                  <image class="home_blob-img" x="0" y="0" xlink:href="./image/snow.jpg4" >
                 </g>
               </svg>
             </div>
@@ -198,7 +198,7 @@
             <div class="about_buttons">
               <a
                 download=""
-                href="./pdf/Alexa-Cv (1).pdf"
+                href="./pdf/Alexa-Cv (1).pdf//"
                 class="button button--flex"
               >
                 Download CV <i class="uil uil-download-alt button_icon"></i>
@@ -409,10 +409,10 @@
               <div class="qualification_data">
                 <div>
                   <h3 class="qualification_title">Web Development</h3>
-                  <span class="qualification_subtitle">Seoul - University</span>
+                  <span class="qualification_subtitle">Joongbu University</span>
                   <div class="qualification_calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2020 - 2021
+                    2000 - 2000
                   </div>
                 </div>
 
@@ -436,7 +436,7 @@
                   <span class="qualification_subtitle">Joongbu University</span>
                   <div class="qualification_calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2022 - 2024
+                    2000 - 2000
                   </div>
                 </div>
               </div>
@@ -448,7 +448,7 @@
                   <span class="qualification_subtitle">Joongbu University</span>
                   <div class="qualification_calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2020 - 2023
+                    2000 - 2000
                   </div>
                 </div>
 
@@ -471,7 +471,7 @@
                   <span class="qualification_subtitle">Joongbu University</span>
                   <div class="qualification_calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2019 - 2023
+                    2000 - 2000
                   </div>
                 </div>
               </div>
@@ -483,10 +483,10 @@
               <div class="qualification_data">
                 <div>
                   <h3 class="qualification_title">Software Enginer</h3>
-                  <span class="qualification_subtitle">Microsoft - Norway</span>
+                  <span class="qualification_subtitle">Microsoft - Uzbekistan</span>
                   <div class="qualification_calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2020 - 2021
+                    2000 - 2000
                   </div>
                 </div>
 
@@ -510,7 +510,7 @@
                   <span class="qualification_subtitle">Apple Inc - Seoul </span>
                   <div class="qualification_calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2022 - 2024
+                    2000 - 2000
                   </div>
                 </div>
               </div>
@@ -524,7 +524,7 @@
                   >
                   <div class="qualification_calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2020 - 2023
+                    2000 - 2000
                   </div>
                 </div>
 
