--- a/Portfolio/assets/index.html
+++ b/Portfolio/assets/index.html
@@ -95,7 +95,7 @@
               </a>
 
               <a
-                href="https://www.github.com/"
+                href="https://github.com/Giyosidin"
                 target="_blank"
                 class="home_social-icon"
               >
@@ -165,7 +165,7 @@
           <div class="about_data">
             <p class="about_description">
               Web developer, with extensive knowledge and years of experience,
-              working in web technologies and Ui / Ux design, delivering quality
+              working in web technologies, delivering quality
               work.
             </p>
 
